Add responsivenness, fix styling issues

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <body>
     <!-- TOP NAVIGATION -->
     <nav>
-      <h1 class="welcome">Welcome to Score Keeper!</h1>
+      <h1 class="welcome">Score Keeper</h1>
+      <p>Welcome to Score Keeper! Add your players below, and click "Let's Play" to start recording scores. To add more players after your game has started, click "Add More Players" and to restart the game, simply refresh the page.</p>
     </nav>
 
     <main class="app">
       <div class="add__players-container">
-        <!-- <h1 class="clock">The clock</h1> -->
         <h2 class="">Add Players</h2>
         <input
           type="text"
@@ -36,7 +36,7 @@
       </div>
       <div class="add_resetplayers-container hidden">
         <button class="form__btn add-more-players">Add More Players</button>
-        <button class="form__btn reset-players">Reset Players</button>
+      
       </div>
 
       <!-- PLAYERS AND SCORES -->
