--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
       <h1 class="welcome">Score Keeper</h1>
       <div class="modal">
         <h6 class="btn-close-modal">close</h6>
+        <h6><strong>Welcome to Score Keeper!</strong></h6>
         <p>
-          Welcome to Score Keeper! Add your players below, and click "Let's
-          Play" to start recording scores. To add more players after your game
-          has started, click "Add More Players" and to restart the game, simply
-          refresh the page.
+          <em>How to use Score Keeper:</em> <br />
+          Add your player names, and click "Add Player. <br />Click "let's play"
+          when all players are added.<br />To add more players once your game
+          has started, click "Add More Players".<br />
+          To see these instructions again, click "Instructions".<br />
+          To restart the game, simply refresh the page.
         </p>
       </div>
     </nav>
@@ -57,7 +60,7 @@
         <div class="winner"></div>
       </div>
       <div class="show-modal">
-        <button class="form__btn btn-show-modal">Instructions</button>
+        <button class="btn-show-modal">Instructions</button>
       </div>
     </main>
     <div class="overlay"></div>
