--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <h6><strong>Welcome to Score Keeper!</strong></h6>
         <p>
           <em>How to use Score Keeper:</em> <br />
-          Add your player names, and click "Add Player. <br />Click "let's play"
-          when all players are added.<br />To add more players once your game
-          has started, click "Add More Players".<br />
-          To see these instructions again, click "Instructions".<br />
-          To restart the game, simply refresh the page.
+          • Add your player names, and click "Add Player. <br />• Click "let's
+          play" when all players are added.<br />• To add more players once your
+          game has started, click "Add More Players".<br />
+          • To see these instructions again, click "Instructions".<br />
+          • To restart the game, simply refresh the page.
         </p>
       </div>
     </nav>
