--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
   <body>
     <!-- TOP NAVIGATION -->
     <nav>
-      <h1 class="welcome">Score Keeper</h1>
       <div class="modal">
         <h6 class="btn-close-modal">close</h6>
-        <h6><strong>Welcome to Score Keeper!</strong></h6>
+        <h6><strong>Welcome to The Score Keeper!</strong></h6>
         <p>
           <em>How to use Score Keeper:</em> <br />
           • To add your players, click <strong>Add Player</strong> <br />• Click
@@ -66,7 +65,9 @@
       </div>
     </main>
     <div class="overlay"></div>
-
+    <footer>
+      <h1 class="welcome">TheScoreKeeper.io</h1>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
