Format feedback button

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
         <h1 class="welcome">TheScoreKeeper.io</h1>
       </div>
       <div id="feedback">
-        <button href="mailto:cecesanclemente@gmail.com">Feedback</button>
+        <!-- <button href="mailto:cecesanclemente@gmail.com">Feedback</button> -->
 
-        <!-- <a href="mailto:cecesanclemente@gmail.com">Feedback</a> -->
+        <a href="mailto:cecesanclemente@gmail.com">Feedback</a>
       </div>
     </footer>
     <!-- <script src="script-alternate.js"></script> -->
