--- a/index.html
+++ b/index.html
@@ -79,16 +79,18 @@
     </main>
     <div class="overlay"></div>
     <footer>
-      <div id="credit">
-        <p>Created by Cynthia Sanclemente</p>
-      </div>
       <div id="title">
         <h1 class="welcome">TheScoreKeeper.io</h1>
       </div>
-      <div id="feedback">
-        <!-- <button href="mailto:cecesanclemente@gmail.com">Feedback</button> -->
+      <div class="subfooter">
+        <div id="credit">
+          <p>Created by Cynthia Sanclemente</p>
+        </div>
+        <div id="feedback">
+          <!-- <button href="mailto:cecesanclemente@gmail.com">Feedback</button> -->
 
-        <a href="mailto:cecesanclemente@gmail.com">Feedback</a>
+          <a href="mailto:cecesanclemente@gmail.com">Feedback</a>
+        </div>
       </div>
     </footer>
     <!-- <script src="script-alternate.js"></script> -->
