Change last name in credit to Gwendo

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
       <div class="subfooter">
         <div id="credit">
-          <p>Created by Cynthia Sanclemente</p>
+          <p>Created by Cynthia Gwendo</p>
         </div>
         <div id="feedback">
           <!-- <button href="mailto:cecesanclemente@gmail.com">Feedback</button> -->
